<resources>
    <string name="app_name">Rankr</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="app_intro">Intro Activity</string>

    <!--Phrases-->
    <string name="intro_phrase_1">Join your friends. Climb the ladder.</string>
    <string name="welcome_text">Welcome to Rankr</string>
    <string name="sign_in_text">Sign in</string>
    <string name="create_league_text">Create League</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="hint_email">Email address</string>
    <string name="next_text">Next</string>
    <string name="create_league_name_text">Name your rankr league</string>
    <string name="create_league_summary_text">We\'ll use this to name your Rankr league. You won\'t be able to change this later.</string>
    <string name="add_an_email_hint">Add an email</string>
    <string name="win">Win</string>
    <string name="lose">Lose</string>
    <string name="select_opponent">Select Your Opponent</string>

    <string name="mailgun_api_key">key-181e8242f9bfaf5d0726ce4770e37963</string>
    <string name="email_summary_text">We suggest using your work email if you\'re create a team for your business, department, or project</string>
    <string name="create_game">Create Game</string>
</resources>
