<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:text="@string/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvTitle"
        android:padding="40dp"
        android:textSize="30dp"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"/>

    <ImageView
        android:layout_below="@id/tvTitle"
        android:id="@+id/intro_image_1"
        android:src="@drawable/rankr_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_below="@id/intro_image_1"
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro_phrase_1"
        android:padding="28dp"
        android:textSize="22dp"
        android:gravity="center" />

    <!--<Button-->
        <!--android:layout_below="@+id/description"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerInParent="true"-->
        <!--android:id="@+id/btnSignUp"-->
        <!--android:text="Sign up from invitation"-->
        <!--style="@style/Button.AllCaps"/>-->

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_in_text"
            style="@style/Button.AllCaps"/>

        <ImageView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:src="@android:drawable/divider_horizontal_bright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnCreateLeague"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create_league_text"
            style="@style/Button.AllCaps"/>

    </LinearLayout>

</RelativeLayout>