<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="ca.danielw.rankr.activities.CreateLeagueActivity">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="100dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColorHint="@color/white"
            app:hintTextAppearance="@style/EditText.Label">

            <EditText
                android:id="@+id/etLeagueName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_league_name_text"
                android:inputType="text"
                style="@style/EditText.Flow"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/create_league_summary_text"/>

        <TextView
            android:id="@+id/tvWarning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:textColor="@color/orange"
            android:textSize="16sp"
            android:text="That league name is taken unfortunately."
            android:visibility="gone"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnNext"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_text"
        android:enabled="false"
        style="@style/Button.Flow"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
