<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rlBackground">

    <io.codetail.widget.RevealLinearLayout
        android:id="@+id/llSelector"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:gravity="center"
            android:id="@+id/btnLose"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/lose"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@color/red"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:clickable="true"/>

        <TextView
            android:gravity="center"
            android:id="@+id/btnWin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/win"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@color/green"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:clickable="true"/>

    </io.codetail.widget.RevealLinearLayout>

    <ScrollView
        android:layout_above="@id/llSelector"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_opponent"
                android:textSize="22sp"
                android:padding="@dimen/activity_horizontal_margin"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvUsernames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>